# Orion-Mission-Mode

./: .gitignore  README.md  illustration.md
cases/: case_aapl_finance_report.md  case_contract_analysis.md  case_mapreduce_log.md  case_tampa_public_comments.md
results/: 147_cases_evaluation.json  148_cases_evaluation.json  case_browser_automation.md  case_byok_guide.md
results/task_access_log_anomaly/: evaluation_score.json
results/task_blog/: evaluation_score.json
results/task_browser_automation/: evaluation_score.json
results/task_byok_best_practices/: evaluation_score.json
results/task_calendar/: evaluation_score.json  task_introduction_evaluation_illustration.md
results/task_cicd_pipeline_debug/: evaluation_score.json  task_introduction_evaluation_illustration.md
results/task_clawdhub/: evaluation_score.json  task_introduction_evaluation_illustration.md
results/task_clawdhub/output/: README.md  pyproject.toml
results/task_codebase_navigation/: evaluation_score.json
results/task_commit_message_writer/: evaluation_score.json
results/task_competitive_research/: evaluation_score.json
results/task_contract_analysis/: evaluation_score.json
results/task_cron_organizer/: evaluation_score.json
results/task_csv_cities_density/: evaluation_score.json
results/task_csv_cities_filter/: evaluation_score.json
results/task_csv_cities_growth/: evaluation_score.json
results/task_csv_cities_ranking/: evaluation_score.json
results/task_csv_finance_report/: evaluation_score.json
results/task_csv_gdp_per_capita/: evaluation_score.json
(+356 files in other folders)
